Update commands doc with configmaps and secret

--- a/Btcmp/ConfigmapsAndSecrets/configmap-pod-desc.yaml
+++ b/Btcmp/ConfigmapsAndSecrets/configmap-pod-desc.yaml
@@ -16,3 +16,8 @@ spec:
         configMapKeyRef:
           name: special-config
           key: name
+    - name: SECRET_PASSWORD
+      valueFrom:
+        secretKeyRef:
+          name: mysecret
+          key: password
